Verify ALL tests on JDK 25; fact-check Flink-2.3-Java-25; demote jna-j11 to fallback
JDK-25 sweep (Temurin 25.0.3): recompiled the two Flink modules on JDK 25 and ran
every runnable test — all green. flink-1.20-poc (Flink 1.20.1), flink-2.3-poc
(Flink 2.3.0 incl. async-state runtime enforcement), slatedb-verify, and 13 e2e
mains (FlinkSlateDbE2E, Serde, ReadYourWrites, HybridTiering, ShardPerBucketParallel,
Recovery, RescaleSavepoint, Rescale, Fencing, TTL, MergeSplit, Compaction). Needs
--add-opens java.base/{util,lang,time,util.concurrent}. Previously only the FFM/
SlateDB tests were confirmed on 25; now the pure-Flink modules are too — fully backs
§16.3.

Fact-check: "does Flink 2.3 support Java 25?" — NO. Verified against the live Flink
2.3.0 Java-compatibility docs (2.3.0 is current, released 2026-06-25): still Java 17
(default) + Java 21 (experimental) only, no Java 25. So JDK 25 empirically works but
is officially unsupported; doc's §0/§16.3 stance was already correct.

Demoted §17 / slatedb-jna-j11 to FALLBACK-ONLY (banner in §17 + §16.3 + results
line): since the FFM binding on JDK 25 is now fully validated, the JNA fork is only
for platforms hard-pinned below JDK 22. Kept the module (per user: "keep it, just
demote") — the JDK-11/17-pinned case is distinct from "runs on 25".

Docs: §16.3 dated JDK-25-sweep banner + upstream-docs citation, results block banner,
§17 fallback banner, journal Phase 13.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>